# vanagandr

./: .gitignore  .gitingore  README.md
data/: h.csv  t1.csv  t1debug.csv  t1g.csv  t2.csv  t2debug.csv  t2g.csv  theta.csv  xdebug.csv  y.csv  ydebug.csv  yvec.csv
doc/: vanagandr.dox
doc/css/: style.css
doc/experimental/: BinomialTreeExample.cpp
doc/finance/: BrownianMotionExample1.cpp  CashFlow.dox  CashFlowMaster.dox  Markowitz.dox  SecurityExample.cpp
doc/math/: GoalSeeking.h  Integration.h  Interpolation.cpp  Interpolation.h  Matrix.cpp  Matrix.h  Point.h  TimeCovariance.h
old/: perceptron_test.cpp  perceptron_test.h
old/AI/: Perceptron.h
old/doc/date/: DateExample.cpp
old/doc/experimental/: BondExample.cpp  FutureExample.cpp  MarkExample.cpp  OptionEngineExample.cpp
old/doc/file/: FileExample.cpp
old/doc/finance/: BrownianMotion.dox  BrownianMotionExample2.cpp  CashFlow.cpp  CashFlowsExample1.cpp  CashFlowsExample2.cpp  ChildExample.cpp  CrossCurrencyExample.cpp  CurveMovementExample.cpp  MarkowitzExample.cpp  RoutineExample.cpp
old/doc/math/: Enum.h
old/doc/math1/: FiniteDifferenceExample.cpp  FunctionExample.cpp  GoalSeekingExample.cpp  InterpolationExample.cpp  MatrixExample.cpp  TimeCovarianceExample.cpp
src/: CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.2-pre1  enum.h
src/AI/: Perceptron.cpp  Perceptron.h
src/containers/: Capacity.h  DataFrame.h  LinkedList.h  Queues.h  SimpleArray.h  Sort.h  Stack.h  Type.h  Vector2D.h
src/error/: Error.h  ErrorConfig.h
src/file/: MatrixIO.cpp  MatrixIO.h
src/finance/: BrownianMotion.h  Options.h  VarianceMin.cpp  VarianceMin.h  mdfe.h
src/formating/: format.cpp  format.h  strtable.h
src/future/cryptography/: utils.h
src/future/plot/: Plot.h
src/math/: BFGS.h  CubicSpline.h  CubicSpline.vba  Helpers.cpp  Helpers.h  Matrix.cpp  Matrix.h  MinSolver1D.h  RootSolver1D.h  integeration.h  pde.h
src/memory/: Ptr.h
src/statistic/: LinearRegression.cpp  LinearRegression.h
src/statistics/: LinearRegression.cpp  LinearRegression.h  LogisticRegression.h  Moments.h
src/test/: eigen_date.h  eigen_date_test.cpp  file_test.cpp  file_test.h  formating_test.cpp  formating_test.h  integration_test.cpp  integration_test.h  linear_reg_test.cpp  linear_reg_test.h  linkedlist_test.cpp  linkedlist_test.h  logistic_test.cpp  logistic_test.h  main_test.cpp  matrix_test.cpp  matrix_test.h  option_test.cpp  option_test.h  pde_test.cpp  pde_test.h  perceptron_test.cpp  perceptron_test.h  pointer_test.cpp  simplearray_test.cpp  simplearray_test.h  solver1D_test.cpp  solver1D_test.h  sort_test.cpp  sort_test.h  varmin_test.cpp  varmin_test.h  vector2D_test.cpp
tests/: x.csv  y.csv
